build: working paperweight-patcher toolchain for Paper 26.2 (JDK 25 / Gradle 9.4.1)
Turned the Phase-0 scaffold into a REAL, verified fork build (internet was actually available;
earlier "no internet" was a Windows curl cert-revocation quirk — git tunnels fine):

- gradle.properties: Paper 26.2, paperCommit 75c0b48, group cloud.victus
- settings.gradle.kts / build.gradle.kts: paperweight-patcher 2.0.0-beta.21, foojay JDK-25
  resolver, victus-api/victus-server subprojects (mirrors current Paper hard-fork convention)
- victus-{server,api}/build.gradle.kts.patch: fork-registration patches adapted from PurpurMC's
  ver/26.2 template (forks.register("victus") + activeFork + :victus-api wiring + rebrand)
- gradle wrapper 9.4.1 committed; CI (build.yml) -> JDK 25 + applyAllPatches + auto-deploy job
  to a Pterodactyl server (docs/DEPLOY.md lists the secrets to set)
- scripts/dev-env.sh: fixes the two local build blockers — Windows-style temp paths (JVM mangles
  MINGW /e/ paths) and -Djavax.net.ssl.trustStoreType=Windows-ROOT (so Gradle TLS survives Avast
  interception; Linux/CI needs neither)

Verified: paperweight checks out Paper, applies patches, and generates the subproject build files.
Full compile runs via `./scripts/build.sh` (applyAllPatches + build).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>